# milsko

./: .clang-format  .clangd  .gitattributes  .gitignore  BorMakefile  CHANGELOG.txt  CMakeLists.txt  Doxyfile  GNUmakefile  Jenkinsfile  Koakumafile  LICENSE  Makefile.m4  Makefile.pl  NTMakefile  README.txt  WatMakefile  compile_flags.txt  configure  example.c  milsko.xml
cf/: Darwin.m4
doc/: BACKENDDEV.md  LOWLEVEL.md  NEWWIDGET.md  TIERS.md  TINYCONFIG.md  index.html
examples/: CMakeLists.txt  checkbox.c  color_picker.c  example.c  gears.c  glboing.c  glclock.c  glcube.c  glgears.c  gltriangle.c  gltripaint.c  harvard.c  image.c  listbox.c  messagebox.c  oldglut.c  opengl.c  rotate.c  scrollbar.c  viewport.c  vulkan.c
examples/basic/: CMakeLists.txt  box.c  calculator.c  checkbox.c  clipboard.c  color_picker.c  colorpicker.c  combobox.c  example.c  filechooser.c  image.c  listbox.c  messagebox.c  periodic.c  progressbar.c  radiobox.c  rotate.c  scrollbar.c  sevensegment.c  subwindow.c  tab.c  treeview.c  viewport.c
examples/gldemos/: CMakeLists.txt  boing.c  clock.c  cube.c  gears.c  glutlayer.c  triangle.c  tripaint.c
examples/mpegplayer/: common.h  main.c  mpegplayer.c
examples/vkdemos/: CMakeLists.txt  vulkan.c
include/Milsko/: Button.h  Core.h  Default.h  Draw.h  GDI.h  LowLevel.h  MachDep.h  Milsko.h  StringDefs.h  TypeDef.h  TypeDefs.h  Window.h  X11.h
include/Mw/: BaseTypes.h  Button.h  ColorPicker.h  Constants.h  Core.h  Cursor.h  Default.h  Directory.h  Draw.h  Error.h  FileChooser.h  Font.h  Frame.h  GDI.h  Icon.h  Image.h  LowLevel.h  LowLevelMath.h  MachDep.h  Menu.h  MessageBox.h  Milsko.h  Mw.h  OpenGL.h  String.h  StringDefs.h  SubMenu.h  TrueType.h  TypeDefs.h  Unicode.h  Version.h  Vulkan.h  Window.h  X11.h
include/Mw/Abstract/: CharSet.h  Directory.h  Dynamic.h  Mutex.h  Time.h
include/Mw/Dialog/: ColorPicker.h  DirectoryChooser.h  FileChooser.h  MessageBox.h
include/Mw/LowLevel/: AppKit.h  Cairo.h  ClassicMacOS.h  Cocoa.h  GDI.h  Haiku.h  Wayland.h  X11.h
include/Mw/LowLevel/Wayland/: .gitignore  README.md
include/Mw/Resource/: Cursor.h  Font.h  Icon.h
include/Mw/Widget/: Box.h  Button.h  Calendar.h  CheckBox.h  ComboBox.h  Entry.h  Frame.h  Image.h  Label.h  ListBox.h  Menu.h  NumberEntry.h  OpenGL.h  ProgressBar.h  RadioBox.h  ScrollBar.h  Separator.h  SubMenu.h  SubWindow.h  Tab.h  Table.h  Text.h  TreeView.h  Viewport.h  Vulkan.h  Window.h
include/MwOO/: Base.h
include/MwOO/Widget/: Button.h  CheckBox.h  Entry.h  Frame.h  Image.h  Label.h  ListBox.h  Menu.h  NumberEntry.h  OpenGL.h  ScrollBar.h  SubMenu.h  Text.h  Viewport.h  Vulkan.h  Window.h
m4/options/: backend.m4  classic.m4  opengl.m4  vulkan.m4
m4/ostype/: Linux.m4  NetBSD.m4  Windows.m4
m4/toplevel/: options.m4  rules.m4
m4/util/: afterdot.m4  arg.m4  comma.m4  default.m4  foreach.m4  my_syscmd.m4  quote.m4
mk/: fdlibm.mk  flags.mk  freetype2.mk  math.mk  opengl.mk  platform.mk  stb.mk  vulkan.mk
oosrc/: base.cc  deps.mk
oosrc/widget/: button.cc  checkbox.cc  entry.cc  frame.cc  image.cc  label.cc  listbox.cc  menu.cc  numberentry.cc  opengl.cc  scrollbar.cc  submenu.cc  text.cc  viewport.cc  vulkan.cc  window.cc
pl/: rules.pl  utils.pl
pl/ostype/: ClassicMacOS.pl  ClassicMacOS68k.pl  ClassicMacOSPPC.pl  Darwin.pl  FreeBSD.pl  Haiku.pl  Linux.pl  NetBSD.pl  OpenBSD.pl  SunOS.pl  UnixWare.pl  Windows.pl
resource/: banner.pov  harvard.txt  milsko.pc.in  rgb.txt
resource/doxygen-theme/: README  doxygen-awesome.css
resource/font/: 7x14.bdf  7x14B.bdf  cursor.bdf
resource/icon/: icon.sh
resource/logo/: 102x47.pov  banner.pov  banner_10.pov  logo.pov
resource/wayland/: wlr-layer-shell-unstable-v1.xml
src/: boldfont.c  button.c  color.c  color_picker.c  core.c  default.c  directory.c  draw.c  ds.c  error.c  error_internal.h  filechooser.c  font.c  frame.c  gdi.c  image.c  lowlevel.c  menu.c  messagebox.c  opengl.c  stb_ds.h  string.c  text.c  truetype.c  unicode.c  vulkan.c  window.c  x11.c
src/abstract/: charset.c  directory.c  dynamic.c  mutex.c  time.c
src/backend/: .gitignore  appkit.m  cairo.c  call.c  classicmacos.c  cocoa.m  gdi.c  gdi.h  haiku.cc  haiku.cxx  nococoa.m  wayland.c  x11.c  x11.h
src/backend/mac/: carbon.c  carbon.h  mac.c  mac.h  preQuartz.h  quickDraw.c  quickDraw.h
src/backend/render/: gdi.c  gl.c  x11.c
src/backend/wayland/: buffer.c  interfaces.c  region.c  wayland.c
src/color_picker/: color_picker.c  color_picker.h
src/cursor/: arrow.c  cross.c  default.c  hidden.c  text.c
src/dialog/: colorpicker.c  directorychooser.c  filechooser.c  messagebox.c
src/font/: boldfont.c  boldttf.c  font.c  ttf.c
src/icon/: back.c  clock.c  computer.c  directory.c  down.c  error.c  file.c  forward.c  info.c  left.c  news.c  note.c  question.c  right.c  search.c  up.c  warning.c
src/math/: default.c  math.c  math.h  math_internal.h  mmx.c  mmx_guard.c  nbsd_copysign.c  nbsd_endian.c  nbsd_math.h  nbsd_pow.c  nbsd_scalbn.c
src/text/: boldttf.c  directwrite.c  draw.c  dwrite.h  dwrite_2.h  dwrite_3.h  font.c  ft2.c  ft_font.c  gdi.c  stbtt.c  text.c  ttf.c
src/text/font/: boldfont.c  boldmonottf.c  boldttf.c  font.c  monottf.c  ttf.c
src/widget/: box.c  button.c  calendar.c  checkbox.c  combobox.c  entry.c  frame.c  image.c  label.c  listbox.c  menu.c  numberentry.c  opengl.c  opengl_cocoa.m  progressbar.c  radiobox.c  scrollbar.c  separator.c  submenu.c  subwindow.c  tab.c  table.c  text.c  treeview.c  viewport.c  vulkan.c  window.c
tools/: .gitignore  Makefile  archive.sh  color.pl  cursor.pl  doc.pl  doxyfilter.pl  doxygen.sh  font.c  fuzzer.c  genbor.pl  gendcl.pl  genmk.pl  genmsvc.pl  genoo.pl  genwat.pl  git_merge.sh  harvard.pl  icon-converter.c  icon-converter.sh  icon.sh  logo.pov  logo.sh  perpare-gump.sh  prepare-gump.sh  readme.pl  ttf.sh  update.sh  watcom-pack.sh  watcom.pl
vms/: build.com  clean.com
